fix typo in template tag

--- a/c/index.html
+++ b/c/index.html
@@ -190,7 +190,7 @@ make install
             <li><i class="icon-li icon-file-text"></i>
               <a href="https://github.com/igraph/igraph/releases/download/{% include igraph-cversion %}/igraph-{% include igraph-cversion %}.tar.gz">Source code</a></li>
             <li><i class="icon-li icon-windows"></i>
-              <a href="https://github.com/igraph/igraph/releases/download/%{ include igraph-cversion %}/igraph-{% include igraph-cversion %}-msvc.zip">Source code for Microsoft Visual
+			  <a href="https://github.com/igraph/igraph/releases/download/{% include igraph-cversion %}/igraph-{% include igraph-cversion %}-msvc.zip">Source code for Microsoft Visual
               Studio</a></li>
           </ul>
         </p>
