fix a typo in the code of conduct

--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -244,6 +244,6 @@ lead: Rules and regulations for the igraph community
       </p>
       <p>The current organisation of the igraph community is rudimentary. A more professional organisation may develop
         in
-        the future, at which point the procedure of handling indident reports will also be further formalized.</p>
+        the future, at which point the procedure of handling incident reports will also be further formalized.</p>
     </div>
   </div>
