--- a/python/index.html
+++ b/python/index.html
@@ -276,6 +276,9 @@ $ pacman --noconfirm -S autoconf automake bison flex \
               <a href="/python/doc/tutorial/tutorial.html">Tutorial &ndash; read
                 online</a></li>
             <li><i class="icon-li icon-link"></i>
+              <a href="/python/doc/tutorial/">User guide &ndash; browse
+                online</a> <span class="text-secondary">(work in progress)</span></li>
+            <li><i class="icon-li icon-link"></i>
               <a href="/python/doc/igraph-module.html">
                 Reference manual &ndash; browse online</a></li>
             <li><i class="icon-li icon-book"></i>
