fix: R download page now simply links to the CRAN release page

--- a/r/index.html
+++ b/r/index.html
@@ -166,21 +166,14 @@ library(igraph)
     Latest stable version
     &ndash; {% include igraph-rversion %}
     </h3>
-        <p>
-          <small> Note: the simplest way to install the igraph R
-            package is typing <code>install.packages("igraph")</code>
-            in your R session.</small>
-        </p>
-        <p>
+        <p>The simplest way to install the igraph R package is typing
+		<code>install.packages("igraph")</code> in your R session.</p>
+		<p>If you want to download the package manually, the following link leads
+		you to the page of the latest release on CRAN where you can pick the
+		appropriate source or binary distribution yourself.</p>
           <ul class="icons-ul list-unstyled">
-            <li><i class="icon-li icon-windows"></i>
-              <a href="https://cran.r-project.org/bin/windows/contrib/r-release/igraph_{% include igraph-rversion %}.zip">Windows binary package</a></li>
-            <li><i class="icon-li icon-apple"></i>
-              <a href="https://cran.r-project.org/bin/macosx/contrib/r-release/igraph_{% include igraph-rversion %}.tgz">Mac OS X universal binary package</a></li>
-            <li><i class="icon-li icon-file-text"></i>
-        <a href="https://cran.r-project.org/src/contrib/igraph_{% include igraph-rversion %}.tar.gz">Source package</a></li>
+            <li><a href="https://cran.r-project.org/web/packages/igraph/index.html">CRAN release page for igraph</a></li>
           </ul>
-        </p>
 
         <h3><span id="devdown" class="anchor">&nbsp;</span>
           Development version</h3>
