fix: removed last remaining reference to the mailing list from the homepage

--- a/r/index.html
+++ b/r/index.html
@@ -38,7 +38,7 @@ animated_header: true
           <li class="nav-item">
             <a class="nav-link" href="#help"><i class="fa fa-fw fa-question"></i> Get help</a>
             <ul class="nav">
-              <li class="nav-item"><a class="nav-link" href="#list">Mailing list</a></li>
+              <li class="nav-item"><a class="nav-link" href="#discourse">igraph support forum</a></li>
               <li class="nav-item"><a class="nav-link" href="#so">Stack Overflow</a></li>
               <li class="nav-item"><a class="nav-link" href="#contributebugs">Report bugs</a></li>
             </ul>
@@ -195,6 +195,14 @@ library(igraph)
           on the list, you need to sign up first. You can also 
           <a href="http://lists.nongnu.org/archive/html/igraph-help/">
           search the mailing list.</a>
+        </p>
+
+        <h3><span id="discourse" class="anchor">&nbsp;</span>igraph support forum</h3>
+        <p>
+          Post your question on the
+          <a href="https://igraph.discourse.group">igraph support forum</a>.
+		  Make sure that you include a minimal reproducible
+          example, complete with code and data.
         </p>
 
         <h3><span id="so" class="anchor">&nbsp;</span>Stack Overflow</h3>
