--- a/python/index.html
+++ b/python/index.html
@@ -334,7 +334,7 @@ $ pacman --noconfirm -S autoconf automake bison flex \
           <h1><span id="help" class="anchor">&nbsp;</span>Get help</h1>
         </div>
 
-        <h3><span id="list" class="anchor">&nbsp;</span>igraph support forum</h3>
+        <h3><span id="discourse" class="anchor">&nbsp;</span>igraph support forum</h3>
         <p>
           Post your question on the
           <a href="https://igraph.discourse.group">
