updated Python documentation generation mechanism to PyDoctor

--- a/python/index.html
+++ b/python/index.html
@@ -279,10 +279,8 @@ $ pacman --noconfirm -S autoconf automake bison flex \
               <a href="/python/doc/tutorial/">User guide &ndash; browse
                 online</a> <span class="text-secondary">(work in progress)</span></li>
             <li><i class="icon-li icon-link"></i>
-              <a href="/python/doc/igraph-module.html">
+              <a href="/python/doc/api/index.html">
                 Reference manual &ndash; browse online</a></li>
-            <li><i class="icon-li icon-book"></i>
-              <a href="/python/doc/python-igraph.pdf">PDF file</a></li>
           </ul>
         </p>
 
