doc: add information about vcpkg, MacPorts and Homebrew

--- a/c/index.html
+++ b/c/index.html
@@ -71,10 +71,21 @@ cmake --build .
 cmake --install .{% endhighlight %}
         </p>
 
+		<p>
+		  igraph is also available in several package managers:
+		</p>
+
+		<ul>
+		  <li>vcpkg: <code>vcpkg install igraph</code></li>
+		  <li>MacPorts (macOS): <code>sudo port install igraph</code></li>
+		  <li>Homebrew (macOS): <code>brew install igraph</code></li>
+		</ul>
+
         <p>
           See the <a href="/c/doc/igraph-Installation.html">Installation</a>
-          chapter of the manual for more detailed instructions. Windows-specific instructions
-          are also provided there.
+          chapter of the manual for more detailed instructions for building
+		  igraph from source. Windows-specific instructions are also provided
+		  there.
         </p>
 
         <p class="text-muted">
