update R index page, remove reference to mailing list and cran branch

--- a/r/index.html
+++ b/r/index.html
@@ -100,7 +100,7 @@ library(igraph)
               {% include rfun f="rglplot" %} to work.</li>
             <li>The {% include rpkg p="ape" %} package is needed to
               plot nice dendrograms with 
-              {% include rfun f="dendPlot" %}.</li>
+              {% include rfun f="dendPlot" %}</li>
           </ul>
         </p>
 
@@ -178,7 +178,7 @@ library(igraph)
         <h3><span id="devdown" class="anchor">&nbsp;</span>
           Development version</h3>
         <p>
-      Clone (or fork) the <code>dev</code> or <code>cran</code> branch from the
+          Clone (or fork) the <code>dev</code> branch from the
           <a href="https://github.com/igraph/rigraph">rigraph git
             repository on github.</a>
         </p>
@@ -186,16 +186,6 @@ library(igraph)
         <div class="page-header">
           <h1><span id="help" class="anchor">&nbsp;</span>Get help</h1>
         </div>
-
-        <h3><span id="list" class="anchor">&nbsp;</span>Mailing list</h3>
-        <p>
-          Post a question on the
-          <a href="https://lists.nongnu.org/mailman/listinfo/igraph-help">
-            igraph-help mailing list</a>. To avoid spam
-          on the list, you need to sign up first. You can also 
-          <a href="http://lists.nongnu.org/archive/html/igraph-help/">
-          search the mailing list.</a>
-        </p>
 
         <h3><span id="discourse" class="anchor">&nbsp;</span>igraph support forum</h3>
         <p>
