chore: minor tweaks to main Python page

--- a/python/index.html
+++ b/python/index.html
@@ -23,9 +23,6 @@ animated_header: true
 
           <li class="nav-item">
             <a class="nav-link" href="#docs"><i class="fa fa-fw fa-book"></i> Documentation</a>
-            <ul class="nav">
-              <li class="nav-item"><a class="nav-link" href="#pymanual">Python manual</a></li>
-            </ul>
           </li>
 
           <li class="nav-item">
@@ -269,7 +266,6 @@ $ pacman --noconfirm -S autoconf automake bison flex \
           <small>&ndash; for version {% include igraph-pyversion %}</small></h1>
         </div>
 
-        <h3><span id="pymanual" class="anchor">&nbsp;</span>Python manual</h3>
         <p>
           <ul class="icons-ul list-unstyled">
             <li><i class="icon-li icon-link"></i>
@@ -323,7 +319,7 @@ $ pacman --noconfirm -S autoconf automake bison flex \
         <h3><span id="devdown" class="anchor">&nbsp;</span>
           Development version</h3>
         <p>
-          Clone (or fork) the <code>master</code> branch from the
+          Clone (or fork) the <code>develop</code> branch from the
           <a href="https://github.com/igraph/python-igraph">python-igraph git
             repository on GitHub.</a>
         </p>
