--- a/python/index.html
+++ b/python/index.html
@@ -253,9 +253,9 @@ $ pacman --noconfirm -S autoconf automake bison flex \
 
         <p>
           <ul>
-            <li>A short tutorial is provided on <a href="/python/doc/tutorial/tutorial.html">this page</a>.</li>
-            <li>The documentation of the <a href="/python/doc/igraph.Graph-class.html">Graph</a> and
-            <a href="/python/doc/igraph.GraphBase-class.html">GraphBase</a>
+            <li>A short tutorial is provided on <a href="/python/doc/tutorial/{% include igraph-pyversion %}/tutorial.html">this page</a>.</li>
+            <li>The documentation of the <a href="/python/doc/api/{% include igraph-pyversion %}/igraph.Graph-class.html">Graph</a> and
+              <a href="/python/doc/api/{% include igraph-pyversion %}/igraph.GraphBase-class.html">GraphBase</a>
             classes provide a good overview of most of the functionality in the
             Python interface.</li>
           </ul>
