Build old python docs using epydoc, repatch pydoctor

--- a/c/index.html
+++ b/c/index.html
@@ -3,6 +3,8 @@ layout: default
 mainheader: Get started with the igraph library
 lead: Install and start using the igraph library
 animated_header: true
+vmenu: true
+doctype: jekyll/
 ---
 
 <div class="container">
@@ -82,7 +84,7 @@ cmake --install .{% endhighlight %}
 		</ul>
 
         <p>
-          See the <a href="/c/doc/igraph-Installation.html">Installation</a>
+        See the <a href="/c/doc/jekyll/{{ langversion }}/igraph-Installation.html">Installation</a>
           chapter of the manual for more detailed instructions for building
 		  igraph from source. Windows-specific instructions are also provided
 		  there.
@@ -104,7 +106,7 @@ cmake --install .{% endhighlight %}
               for testing). You can find them in the
               <code>examples/simple</code> directory.</li>
             <li>Most of the examples are also included in the
-              <a href="/c/doc/">Reference Manual</a>.
+              <a href="/c/doc/jekyll/{{ langversion }}/">Reference Manual</a>.
           </ul>
         </p>
 
@@ -113,9 +115,9 @@ cmake --install .{% endhighlight %}
         <p>
           <ul class="icons-ul list-unstyled">
             <li><i class="icon-li icon-link"></i>
-              <a href="/c/doc/">Browse online</a></li>
+              <a href="/c/doc/jekyll/{{ langversion }}/">Browse online</a></li>
             <li><i class="icon-li icon-book"></i>
-              <a href="/c/doc/igraph-docs.pdf">PDF file</a></li>
+              <a href="/c/doc/pdf/{{ langversion }}/igraph-docs.pdf">PDF file</a></li>
             <!-- <li><i class="icon-li icon-briefcase"></i> -->
             <!--   <a href="/c/doc/igraph-docs.tar.gz">HTML bundle</a></li> -->
           </ul>
