--- a/python/index.html
+++ b/python/index.html
@@ -269,13 +269,13 @@ $ pacman --noconfirm -S autoconf automake bison flex \
         <p>
           <ul class="icons-ul list-unstyled">
             <li><i class="icon-li icon-link"></i>
-              <a href="/python/doc/tutorial/tutorial.html">Tutorial &ndash; read
+              <a href="/python/doc/tutorial/{% include igraph-pyversion %}/tutorial.html">Tutorial &ndash; read
                 online</a></li>
             <li><i class="icon-li icon-link"></i>
-              <a href="/python/doc/tutorial/">User guide &ndash; browse
+              <a href="/python/doc/tutorial/{% include igraph-pyversion %}/">User guide &ndash; browse
                 online</a> <span class="text-secondary">(work in progress)</span></li>
             <li><i class="icon-li icon-link"></i>
-              <a href="/python/doc/api/index.html">
+              <a href="/python/doc/api/{% include igraph-pyversion %}/index.html">
                 Reference manual &ndash; browse online</a></li>
           </ul>
         </p>
