Better endpoints and new post

--- a/r/index.html
+++ b/r/index.html
@@ -108,13 +108,13 @@ library(igraph)
 
         <p>
           <ul>
-            <li>The <a href="/r/doc/jekyll/{% include igraph-rversion %}/aaa-igraph-package.html">
+            <li>The <a href="/r/html/{% include igraph-rversion %}/aaa-igraph-package.html">
               <code class="rman">igraph</code></a> manual page is a good place
               to start.</li>
 <!--             <li>Some screenshots and examples are -->
 <!--               <a href="">here.</a></li>           -->
             <li>Type in <code>demo(package="igraph")</code> 
-              (or use <a href="https://igraph.org/r/doc/jekyll/{% include igraph-rversion %}/igraph_demo.html">igraphdemo()</a> if you have
+              (or use <a href="https://igraph.org/r/html/{% include igraph-rversion %}/igraph_demo.html">igraphdemo()</a> if you have
               <span style="white-space:nowrap;">
                 {% include rbasepkg p="tcltk" %})</span> to get a list of
               demos.</li>
@@ -130,9 +130,9 @@ library(igraph)
         <p>
           <ul class="icons-ul list-unstyled">
             <li><i class="icon-li icon-link"></i>
-              <a href="/r/doc/jekyll/{% include igraph-rversion %}/">Browse online</a></li>
+              <a href="/r/html/{% include igraph-rversion %}/">Browse online</a></li>
             <li><i class="icon-li icon-book"></i>
-            <a href="/r/doc/igraph.pdf">PDF file</a></li>
+            <a href="/r/igraph.pdf">PDF file</a></li>
           </ul>
         </p>
 
