--- a/c/index.html
+++ b/c/index.html
@@ -82,7 +82,7 @@ cmake --install .{% endhighlight %}
 		</ul>
 
         <p>
-        See the <a href="/c/html/{% include igraph-cversion %}/igraph-Installation.html">Installation</a>
+        See the <a href="/c/html/latest/igraph-Installation.html">Installation</a>
           chapter of the manual for more detailed instructions for building
 		  igraph from source. Windows-specific instructions are also provided
 		  there.
@@ -104,7 +104,7 @@ cmake --install .{% endhighlight %}
               for testing). You can find them in the
               <code>examples/simple</code> directory.</li>
             <li>Most of the examples are also included in the
-              <a href="/c/html/{% include igraph-cversion %}/">Reference Manual</a>.
+              <a href="/c/html/latest/">Reference Manual</a>.
           </ul>
         </p>
 
@@ -113,9 +113,9 @@ cmake --install .{% endhighlight %}
         <p>
           <ul class="icons-ul list-unstyled">
             <li><i class="icon-li icon-link"></i>
-              <a href="/c/html/{% include igraph-cversion %}/">Browse online</a></li>
+              <a href="/c/html/latest/">Browse online</a></li>
             <li><i class="icon-li icon-book"></i>
-              <a href="/c/pdf/{% include igraph-cversion %}/igraph-docs.pdf">PDF file</a></li>
+              <a href="/c/pdf/latest/igraph-docs.pdf">PDF file</a></li>
             <!-- <li><i class="icon-li icon-briefcase"></i> -->
             <!--   <a href="/c/igraph-docs.tar.gz">HTML bundle</a></li> -->
           </ul>
