fix: fix a few broken links

--- a/c/index.html
+++ b/c/index.html
@@ -71,21 +71,21 @@ cmake --build .
 cmake --install .{% endhighlight %}
         </p>
 
-		<p>
-		  igraph is also available in several package managers:
-		</p>
+        <p>
+          igraph is also available in several package managers:
+        </p>
 
-		<ul>
-		  <li>vcpkg: <code>vcpkg install igraph</code></li>
-		  <li>MacPorts (macOS): <code>sudo port install igraph</code></li>
-		  <li>Homebrew (macOS): <code>brew install igraph</code></li>
-		</ul>
+        <ul>
+          <li>vcpkg: <code>vcpkg install igraph</code></li>
+          <li>MacPorts (macOS): <code>sudo port install igraph</code></li>
+          <li>Homebrew (macOS): <code>brew install igraph</code></li>
+        </ul>
 
         <p>
-        See the <a href="/c/html/latest/igraph-Installation.html">Installation</a>
+          See the <a href="/c/html/{% include igraph-cversion %}/igraph-Installation.html">Installation</a>
           chapter of the manual for more detailed instructions for building
-		  igraph from source. Windows-specific instructions are also provided
-		  there.
+          igraph from source. Windows-specific instructions are also provided
+          there.
         </p>
 
         <p class="text-muted">
@@ -115,7 +115,7 @@ cmake --install .{% endhighlight %}
             <li><i class="icon-li icon-link"></i>
               <a href="/c/html/latest/">Browse online</a></li>
             <li><i class="icon-li icon-book"></i>
-              <a href="/c/pdf/latest/igraph-docs.pdf">PDF file</a></li>
+              <a href="/c/pdf/{% include igraph-cversion %}/igraph-docs.pdf">PDF file</a></li>
             <!-- <li><i class="icon-li icon-briefcase"></i> -->
             <!--   <a href="/c/igraph-docs.tar.gz">HTML bundle</a></li> -->
           </ul>
