--- a/r/index.html
+++ b/r/index.html
@@ -100,7 +100,7 @@ library(igraph)
               {% include rfun f="rglplot" %} to work.</li>
             <li>The {% include rpkg p="ape" %} package is needed to
               plot nice dendrograms with 
-              {% include rfun f="dendPlot" %}</li>
+              {% include rfunalias f="plot_dendrogram" p="plot_dendrogram.communities" %}</li>
           </ul>
         </p>
 
@@ -108,7 +108,7 @@ library(igraph)
 
         <p>
           <ul>
-            <li>The <a href="/r/html/latest/aaa-igraph-package.html">
+            <li>The <a href="/r/html/{% include igraph-rversion %}/aaa-igraph-package.html">
               <code class="rman">igraph</code></a> manual page is a good place
               to start.</li>
 <!--             <li>Some screenshots and examples are -->
@@ -132,7 +132,7 @@ library(igraph)
             <li><i class="icon-li icon-link"></i>
               <a href="/r/html/latest/">Browse online</a></li>
             <li><i class="icon-li icon-book"></i>
-            <a href="/r/igraph.pdf">PDF file</a></li>
+              <a href="/r/pdf/{% include igraph-rversion %}/igraph.pdf">PDF file</a></li>
           </ul>
         </p>
 
@@ -163,14 +163,13 @@ library(igraph)
         </div>
 
         <h3><span id="rdown" class="anchor">&nbsp;</span>
-    Latest stable version
-    &ndash; {% include igraph-rversion %}
-    </h3>
+          Latest stable version &ndash; {% include igraph-rversion %}
+        </h3>
         <p>The simplest way to install the igraph R package is typing
-		<code>install.packages("igraph")</code> in your R session.</p>
-		<p>If you want to download the package manually, the following link leads
-		you to the page of the latest release on CRAN where you can pick the
-		appropriate source or binary distribution yourself.</p>
+          <code>install.packages("igraph")</code> in your R session.</p>
+          <p>If you want to download the package manually, the following link leads
+          you to the page of the latest release on CRAN where you can pick the
+          appropriate source or binary distribution yourself.</p>
           <ul class="icons-ul list-unstyled">
             <li><a href="https://cran.r-project.org/web/packages/igraph/index.html">CRAN release page for igraph</a></li>
           </ul>
@@ -191,8 +190,8 @@ library(igraph)
         <p>
           Post your question on the
           <a href="https://igraph.discourse.group">igraph support forum</a>.
-		  Make sure that you include a minimal reproducible
-          example, complete with code and data.
+          Make sure that you include a minimal reproducible example, complete
+          with code and data.
         </p>
 
         <h3><span id="so" class="anchor">&nbsp;</span>Stack Overflow</h3>
