--- a/c/index.html
+++ b/c/index.html
@@ -71,21 +71,21 @@ cmake --build .
 cmake --install .{% endhighlight %}
         </p>
 
-		<p>
-		  igraph is also available in several package managers:
-		</p>
+        <p>
+          igraph is also available in several package managers:
+        </p>
 
-		<ul>
-		  <li>vcpkg: <code>vcpkg install igraph</code></li>
-		  <li>MacPorts (macOS): <code>sudo port install igraph</code></li>
-		  <li>Homebrew (macOS): <code>brew install igraph</code></li>
-		</ul>
+        <ul>
+          <li>vcpkg: <code>vcpkg install igraph</code></li>
+          <li>MacPorts (macOS): <code>sudo port install igraph</code></li>
+          <li>Homebrew (macOS): <code>brew install igraph</code></li>
+        </ul>
 
         <p>
-          See the <a href="/c/doc/igraph-Installation.html">Installation</a>
+          See the <a href="/c/html/{% include igraph-cversion %}/igraph-Installation.html">Installation</a>
           chapter of the manual for more detailed instructions for building
-		  igraph from source. Windows-specific instructions are also provided
-		  there.
+          igraph from source. Windows-specific instructions are also provided
+          there.
         </p>
 
         <p class="text-muted">
@@ -104,7 +104,7 @@ cmake --install .{% endhighlight %}
               for testing). You can find them in the
               <code>examples/simple</code> directory.</li>
             <li>Most of the examples are also included in the
-              <a href="/c/doc/">Reference Manual</a>.
+              <a href="/c/html/latest/">Reference Manual</a>.
           </ul>
         </p>
 
@@ -113,11 +113,11 @@ cmake --install .{% endhighlight %}
         <p>
           <ul class="icons-ul list-unstyled">
             <li><i class="icon-li icon-link"></i>
-              <a href="/c/doc/">Browse online</a></li>
+              <a href="/c/html/latest/">Browse online</a></li>
             <li><i class="icon-li icon-book"></i>
-              <a href="/c/doc/igraph-docs.pdf">PDF file</a></li>
+              <a href="/c/pdf/{% include igraph-cversion %}/igraph-docs.pdf">PDF file</a></li>
             <!-- <li><i class="icon-li icon-briefcase"></i> -->
-            <!--   <a href="/c/doc/igraph-docs.tar.gz">HTML bundle</a></li> -->
+            <!--   <a href="/c/igraph-docs.tar.gz">HTML bundle</a></li> -->
           </ul>
         </p>
 
