fix: page links should point to /latest, not to an explicit version

--- a/r/index.html
+++ b/r/index.html
@@ -108,7 +108,7 @@ library(igraph)
 
         <p>
           <ul>
-            <li>The <a href="/r/html/{% include igraph-rversion %}/aaa-igraph-package.html">
+            <li>The <a href="/r/html/latest/aaa-igraph-package.html">
               <code class="rman">igraph</code></a> manual page is a good place
               to start.</li>
 <!--             <li>Some screenshots and examples are -->
@@ -132,7 +132,7 @@ library(igraph)
             <li><i class="icon-li icon-link"></i>
               <a href="/r/html/latest/">Browse online</a></li>
             <li><i class="icon-li icon-book"></i>
-              <a href="/r/pdf/{% include igraph-rversion %}/igraph.pdf">PDF file</a></li>
+              <a href="/r/pdf/latest/igraph.pdf">PDF file</a></li>
           </ul>
         </p>
 
