--- a/python/index.html
+++ b/python/index.html
@@ -255,9 +255,9 @@ $ pacman --noconfirm -S autoconf automake bison flex \
 
         <p>
           <ul>
-            <li>A short tutorial is provided on <a href="/python/tutorial/{% include igraph-pyversion %}/tutorial.html">this page</a>.</li>
-            <li>The documentation of the <a href="/python/api/{% include igraph-pyversion %}/igraph.Graph.html">Graph</a> and
-              <a href="/python/api/{% include igraph-pyversion %}/igraph._igraph.GraphBase.html">GraphBase</a>
+            <li>A short tutorial is provided on <a href="/python/tutorial/latest/tutorial.html">this page</a>.</li>
+            <li>The documentation of the <a href="/python/api/latest/igraph.Graph.html">Graph</a> and
+              <a href="/python/api/latest/igraph._igraph.GraphBase.html">GraphBase</a>
             classes provide a good overview of most of the functionality in the
             Python interface.</li>
           </ul>
@@ -271,7 +271,7 @@ $ pacman --noconfirm -S autoconf automake bison flex \
         <p>
           <ul class="icons-ul list-unstyled">
             <li><i class="icon-li icon-link"></i>
-              <a href="/python/tutorial/{% include igraph-pyversion %}/tutorial.html">Tutorial &ndash; read
+              <a href="/python/tutorial/latest/tutorial.html">Tutorial &ndash; read
                 online</a></li>
             <li><i class="icon-li icon-link"></i>
               <a href="/python/tutorial/latest/">User guide &ndash; browse
