add links to package managers in C/igraph getting started guide

--- a/c/index.html
+++ b/c/index.html
@@ -76,9 +76,9 @@ cmake --install .{% endhighlight %}
         </p>
 
         <ul>
-          <li>vcpkg: <code>vcpkg install igraph</code></li>
-          <li>MacPorts (macOS): <code>sudo port install igraph</code></li>
-          <li>Homebrew (macOS): <code>brew install igraph</code></li>
+          <li><a href="https://vcpkg.io/">vcpkg</a>: <code>vcpkg install igraph</code></li>
+          <li><a href="https://www.macports.org/">MacPorts</a> (macOS): <code>sudo port install igraph</code></li>
+          <li><a href="https://brew.sh/">Homebrew</a> (macOS): <code>brew install igraph</code></li>
         </ul>
 
         <p>
