Redirect default python link to RTD page

--- a/python/index.html
+++ b/python/index.html
@@ -5,12 +5,12 @@ mainheader: python-igraph manual
 lead: For using igraph from Python
 ---
 
-You will be redirected to the <a href="/python/versions/latest/">documentation page of
+You will be redirected to the <a href="https://igraph.readthedocs.io/">documentation page of
 the Python interface</a> soon. Click on the link if the redirect did not work
 or if you have JavaScript turned off.
 
 {% raw %}
 <script>
-window.location.replace("/python/versions/latest/");
+window.location.replace("https://igraph.readthedocs.io/");
 </script>
 {% endraw %}
